--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="course-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 300
                             </div>
@@ -108,7 +108,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="package-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 200
                             </div>
@@ -135,7 +135,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="package-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 100
                             </div>
@@ -168,7 +168,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="package-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 700
                             </div>
@@ -198,7 +198,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="package-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 200
                             </div>
@@ -228,7 +228,7 @@
                                 <i class="fas fa-star empty"></i>
                                 <span>4.5</span>
                             </div>
-                            <div class="package-duration">
+                            <div class="package-price">
                                 <i class="fas fa-dollar-sign"></i>
                                 300
                             </div>
